--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -27,7 +27,7 @@
     * [OpenEVSE_WiFi Add WiFi to OpenEVSE]
     * [How_to_Solder Solder]   
     * [AssemblePlusV2 Build EVSE Plus V2 kit]
-    * [AssemblyGuide] 30A OpenEVSE Plus v1/v2  
+    * [30A_OpenEVSE 30A OpenEVSE Plus]  
   * *Testing*
     * [EVSE_TESTING Testing your EVSE]
   * *Support*
