Edited wiki page 30A_OpenEVSE through web user interface.

--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -31,6 +31,7 @@ You will need:
   * 10 - 5/8# 4-40 screws
   * 4 - 4/40 locking nuts
   * 4 - 1/4" Quick Connect terminals
+  * 4 - 1/4" Nylon Spacers
   * 18AWG - 20AWG wire 300V+
  
 http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8204_1024x1024.jpg
