Edited wiki page 30A_OpenEVSE through web user interface.

--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -1,5 +1,6 @@
 #summary Build guide for example 30A EVSE
 
+<span style="color:#0f0">green writing</span> 
 =Required Parts=
 
 The following parts are available in the [http://openevse-store.myshopify.com/ OpenEVSE Store] 
