Edited wiki page 30A_OpenEVSE through web user interface.

--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -1,11 +1,13 @@
 #summary Build guide for example 30A EVSE
 
  
-=Required Parts=
+=Parts List=
+
+
+*The following parts are available in the [http://openevse-store.myshopify.com/ OpenEVSE Store] *
 
 <b><font color=red>Time Saver</font></b> - The 30A Charge Station Combo avaliable in the [http://openevse-store.myshopify.com/ OpenEVSE Store] contains the parts to build this 30A Charge Station with the exception of the J1772 cable.
 
-*The following parts are available in the [http://openevse-store.myshopify.com/ OpenEVSE Store] *
   * OpenEVSE Plus (Built or Quick Kit)
   * OpenEVSE LCD (Built or Quick Kit)
   * Relay 1 x DPST or 2 x SPST
