Edited wiki page 30A_OpenEVSE through web user interface.

--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -28,8 +28,8 @@
   * 30A Leviton J1772 cordset/handle 
   
 <b><font color=blue>Optional Parts:</font></b>
-  * OpenEVSE EV Simulator
-  * OpenEVSE Programmer
+  * EV Simulator
+  * ISP Programmer
   * Noise/Surge Kit
 
 =Internal Mounting Plate=
