Edited wiki page 30A_OpenEVSE through web user interface.

--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -8,7 +8,7 @@
 
 <b><font color=red>Time Saver</font></b> - The [http://openevse-store.myshopify.com/collections/frontpage/products/openevse-30a-charge-station-combo 30A Charge Station Combo] avaliable in the [http://openevse-store.myshopify.com/ OpenEVSE Store] contains the parts to build this 30A Charge Station with the exception of the J1772 cable.
 
-  * OpenEVSE Plus (Built or Quick Kit)
+  * [http://openevse-store.myshopify.com/collections/frontpage/products/openevse-plus-v2 OpenEVSE Plus] (Built or Quick Kit)
   * OpenEVSE LCD (Built or Quick Kit)
   * Relay 1 x DPST or 2 x SPST
   * CR 8420-1000-G GFCI coil
