--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -4,22 +4,18 @@
 http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8024_1024x1024.jpg?187
 
 =Reference=
-||<b>Color</b>||<b>Digit</b>||<b>Multiplier</b>||
-||<b><font color=black>Black</font></b>|| 0 || 1 ||
-||<b><font color=brown>Brown</font></b>|| 1 || 10 ||
-||<b><font color=red>Red</font></b>|| 2 || 100 ||
-||<b><font color=orange>Orange</font></b>|| 3 || 1000 ||
-||<b><font color=yellow>Yellow</font></b>|| 4 || 10k ||
-||<b><font color=green>Green</font></b>|| 5 || 100k ||
-||<b><font color=blue>Blue</font></b>|| 6 || 1M ||
-||<b><font color=violet>Violet</font></b>|| 7 || 10M ||
-||<b><font color=gray>Gray</font></b>|| 8 || 100M ||
-||<b><font color=black>White</font></b>|| 9 || 1G ||
+
+
+== Schematic, Board files, Gerber files =
+It is a good idea to print the schematic for referance.
+The schematic is located here:
+
+http://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS.zip
 
 
 
 
-= BOM =
+== BOM ==
 ||Part||Value||	Type||	Quantity||	Manufacture||	Part Number||
 ||Board||	||	Board||	1||	GoldPheonix||	Board||
 ||Power	12V||	||PS||	1||	MicroPowerDirect||	MPM-04E-1205||
@@ -54,6 +50,28 @@ http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8024_1024x1024.jpg?187
 ||PILOT ||2Pos||	Term Block||	1||	TE Connectivity||	1776244-2||
 ||Relay	||3Pos||	Term Block||	1||	TE Connectivity	||1776275-3||
 ||.1" ||Headers	||		1||	Misc||	||||
+
+==Resistor Code==
+http://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/4-Band_Resistor.svg/200px-4-Band_Resistor.svg.png
+
+||<b>Color</b>||<b>Digit</b>||<b>Multiplier</b>||
+||<b><font color=black>Black </font></b>|| 0 || 1 ||
+||<b><font color=brown>Brown </font></b>|| 1 || 10 ||
+||<b><font color=red>Red </font></b>|| 2 || 100 ||
+||<b><font color=orange>Orange </font></b>|| 3 || 1k ||
+||<b><font color=yellow>Yellow </font></b>|| 4 || 10k ||
+||<b><font color=green>Green </font></b>|| 5 || 100k ||
+||<b><font color=blue>Blue </font></b>|| 6 || 1M ||
+||<b><font color=violet>Violet </font></b>|| 7 || 10M ||
+||<b><font color=gray>Gray </font></b>|| 8 ||  ||
+||<b><font color=black>White </font></b>|| 9 ||  ||
+
+Example: Brown - Red - Yellow - Gold
+
+Brown = 1 - Red = 2 - Yellow = x 10,000
+
+12 x 10,000 = 120,000 or 120K
+
 
 =Assembly Guide=
 
