--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -51,6 +51,10 @@ http://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS.zip
 ||Relay	||3Pos||	Term Block||	1||	TE Connectivity	||1776275-3||
 ||.1" ||Headers	||		1||	Misc||	||||
 
+== Soldering ==
+
+[http://mightyohm.com/files/soldercomic/FullSolderComic_EN.pdf http://mightyohm.com/blog/wp-content/uploads/2011/04/FullSolderComic_EN_Page_1_resized.png]
+
 ==Resistor Code==
 http://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/4-Band_Resistor.svg/200px-4-Band_Resistor.svg.png
 
