--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -27,4 +27,9 @@ Brown = 1 - Red = 2 - Yellow = x 10,000
 
 12 x 10,000 = 120,000 or 120K
 
+== Soldering ==
+
+[http://mightyohm.com/files/soldercomic/FullSolderComic_EN.pdf http://mightyohm.com/blog/wp-content/uploads/2011/04/FullSolderComic_EN_Page_1_resized.png]
+
+
 Coming Soon
