Edited wiki page 30A_OpenEVSE through web user interface.

--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -92,3 +92,7 @@ http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8228_1024x1024.jpg
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8230_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8230_medium.jpg]
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8231_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8231_medium.jpg]
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8232_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8232_medium.jpg]
+
+=AC Wiring=
+http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8367_1024x1024.jpg
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8359_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8357_medium.jpg]
