--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -19,19 +19,19 @@ http://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS.zip
 ||Part||Value||	Type||	Quantity||	Manufacture||	Part Number|| Marking ||
 ||Board||	||	Board||	1||	GoldPheonix||	Board|| ||
 ||Power	12V||	||PS||	1||	MicroPowerDirect||	MPM-04E-1205|| ||
-||DCDC||	D107E||	DC/DC converter||	1||	MicroPowerDirect||	D107E|| ||
+||DCDC||	D117E||	DC/DC converter||	1||	MicroPowerDirect||	D117E|| ||
 ||Fuse||	1A||	Fuse||	2||	Bel||	RST 1|| ||
 ||IC1||	328p||	Processor||	1||	Atmel||	ATMEGA328P-PU-ND|| ||
 ||IC3, IC5||	MID400||	AC detect||	2 ||	Fairchild Semi	Mid400|| || ||
 ||IC2||	LF353||	Opamp||	1||	Fairchild Semi||	LF353NFS-ND|| ||
 ||IC4||	Lm358||	Opamp||	1||	TI||	296-1395-5-ND||
 ||y1||	16000||	xtal||	1||	||887-1019-ND|| ||
-||C1, C2||	22pf||	Capacitor||	2||	Kemet||	399-9721-ND|| ||
-||C3, C5||	1uf||	Capacitor||	2||	TDK||	445-8607-ND|| ||
-||C4, C8||	.1uf||	Capacitor||	2||	Kemet||	399-9872-1-ND|| ||
-||C6||	2.2uf||	Capacitor||	1||	TDK||	445-8514-ND|| ||
+||C1, C2||	22pf||	Capacitor||	2||	Kemet||	399-9721-ND|| 220 ||
+||C3, C5||	1uf||	Capacitor||	2||	TDK||	445-8607-ND|| 105 ||
+||C4, C8||	.1uf||	Capacitor||	2||	Kemet||	399-9872-1-ND|| 104 ||
+||C6||	2.2uf||	Capacitor||	1||	TDK||	445-8514-ND|| 225 ||
 ||C9||	10UF||	Capacitor||	1||	Panasonic||	P5148-ND|| ||
-||TVS||	P6KE16CA||	TVS Diode||	1||	Littelfuse Inc|| 	P6KE16CA|| ||
+||TVS||	P6KE16CA||	TVS Diode||	1||	Littelfuse Inc|| 	P6KE16CA|| bi-directional ||
 ||D1, D2, D3, D4||	1N4148||	Diode||	4||	Diodes Inc||	1N4148DICT-ND|| ||
 ||D5,D6	||1N5231 ||Diode||	2||	||	1N5231BVSCT-ND|| ||
 ||Q1,Q2	||2n2222||	NPN Transistor||	2||	STMicroelectronics||	497-2598-ND|| ||
