--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -21,10 +21,10 @@ http://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS.zip
 ||Power	12V||	||PS||	1||	MicroPowerDirect||	MPM-04E-1205|| ||
 ||DCDC||	D117E||	DC/DC converter||	1||	MicroPowerDirect||	D117E|| ||
 ||Fuse||	1A||	Fuse||	2||	Bel||	RST 1|| ||
-||IC1||	328p||	Processor||	1||	Atmel||	ATMEGA328P-PU-ND|| ||
-||IC3, IC5||	MID400||	AC detect||	2 ||	Fairchild Semi	Mid400|| || ||
-||IC2||	LF353||	Opamp||	1||	Fairchild Semi||	LF353NFS-ND|| ||
-||IC4||	Lm358||	Opamp||	1||	TI||	296-1395-5-ND||
+||IC1||	328p||	Processor||	1||	Atmel||	ATMEGA328P-PU-ND|| ATMEGA328P-PU ||
+||IC3, IC5||	MID400||	AC detect||	2 ||	Fairchild Semi	Mid400|| || MID400 ||
+||IC2||	LF353||	Opamp||	1||	Fairchild Semi||	LF353NFS-ND|| LF353 ||
+||IC4||	Lm358||	Opamp||	1||	TI||	296-1395-5-ND|| LM368 ||
 ||y1||	16000||	xtal||	1||	||887-1019-ND|| ||
 ||C1, C2||	22pf||	Capacitor||	2||	Kemet||	399-9721-ND|| 220 ||
 ||C3, C5||	1uf||	Capacitor||	2||	TDK||	445-8607-ND|| 105 ||
