--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -36,15 +36,15 @@ http://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS.zip
 ||D5,D6	||1N5231 ||Diode||	2||	||	1N5231BVSCT-ND|| ||
 ||Q1,Q2	||2n2222||	NPN Transistor||	2||	STMicroelectronics||	497-2598-ND|| ||
 ||R1||	649||	Resistor||	1||	vishay||	PPC649YCT-ND|| Blue - Yellow - White - Black||
-||R2, R3||	2.4k||	Resistor||	2||	Panasonic	||CF14JT2K40CT-ND|| ||
-||R4, R11, R12, R17||	330||	Resistor||	4||	Panasonic||	CF14JT330RCT-ND|| ||
-||R5||	56k||	Resistor	||1	||Panasonic||	CF14JT56K0CT-ND|| ||
-||R6, R8, R9, R14, R16||	100k||	Resistor||	5||	Panasonic||	CF14JT100K0CT-ND|| ||
-||R7||	200k||	Resistor||	1||	Panasonic||	CF14JT200K0CT-ND|| ||
-||R10, R19||	10k||	Resistor||	2||	Panasonic||	CF14JT10K0CT-ND|| ||
-||R15||	20k||	Resistor||	1||	Panasonic||	CF14JT20K0CT-ND|| ||
-||R18||	150||	Resistor||	1||	Panasonic||	CF14JT150RCT-ND|| ||
-||R20	||1k||	Resistor||	1||	Panasonic||	CF14JT1K00CT-ND|| ||
+||R2, R3||	2.4k||	Resistor||	2||	Panasonic	||CF14JT2K40CT-ND|| Red - Yellow - Red - Gold ||
+||R4, R11, R12, R17||	330||	Resistor||	4||	Panasonic||	CF14JT330RCT-ND|| Orange - Orange - Brown - Gold||
+||R5||	56k||	Resistor	||1	||Panasonic||	CF14JT56K0CT-ND|| Green - Blue - Orange - Gold ||
+||R6, R8, R9, R14, R16||	100k||	Resistor||	5||	Panasonic||	CF14JT100K0CT-ND|| Brown - Black - Yellow - Gold ||
+||R7||	200k||	Resistor||	1||	Panasonic||	CF14JT200K0CT-ND|| Red - Black - Yellow - Gold ||
+||R10, R19||	10k||	Resistor||	2||	Panasonic||	CF14JT10K0CT-ND|| Brown - Black - Orange - Gold ||
+||R15||	20k||	Resistor||	1||	Panasonic||	CF14JT20K0CT-ND|| Brown- Black - Orange - Gold ||
+||R18||	150||	Resistor||	1||	Panasonic||	CF14JT150RCT-ND|| Brown - Green - Brown - Gold||
+||R20	||1k||	Resistor||	1||	Panasonic||	CF14JT1K00CT-ND|| Brown - Black - Red - Gold||
 ||R21, R22||	47k 1w flame||	resistor||	2||	Panasonic||	P47KW-1BK-ND|| ||
 ||AC_line, AC_test||	2 Pos||	Term Block||	2||	TE Connectivity	||1776275-2|| ||
 ||PILOT ||2Pos||	Term Block||	1||	TE Connectivity||	1776244-2|| ||
