--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -81,6 +81,11 @@ Brown = 1 - Red = 2 - Yellow = x 10,000
 
 Coming soon...
 
+==Resistors==
+==Diodes==
+<b><font color=red>Note: </font></b> All the Diodes in this kit except the TVS diode are directional, note the markings on the board and ensure the dark band on the diode matches the marking.
+
+
 http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_7945_label_1024x1024.jpg?192
 
 
