--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -84,7 +84,11 @@ Coming soon...
 ==Resistors==
 Resistors can be installed in either direction. To save time a few resistors can be placed, soldered then leads trimmed.
 
-Place the 100k resistors (Brown - Black - Yellow - Gold) in positions R6, R8, R9, R14, and R16. Solder leads then trim the excess lead.
+  * Place the 100k ohm resistors (Brown - Black - Yellow - Gold) in positions R6, R8, R9, R14, and R16. Solder then trim the excess lead.
+  * Place the 330 ohm resistors (Orange - Orange - Brown - Gold) in positions R4, R11, R12, R17. Solder then trim the excess lead.
+  * Place the 2.4k ohm resistors (Red - Yellow - Red - Gold) in position R2 and R3 and the 10k ohm resistors (Brown - Black - Orange - Gold) in position R10 and R19. Solder then trim the excess lead.
+  * Place the 47k ohm 1 watt flame proof resistors (Grey in color - marked 473J) in position R21 and R22 and the 649 ohm resistor (Blue - Yellow - White - Black) in position R1. Solder then trim the excess lead.
+
 
  
 ==Diodes==
